// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`flawAffects > Correctly renders the component when there are affects to display 1`] = `
"<div data-v-2d3c4208="" class="osim-affects-section">
  <h4 data-v-2d3c4208="">Affected Offerings</h4>
  <div data-v-2d3c4208="" class="affect-modules-selection mb-4">
    <div data-v-357e30d7="" data-v-2d3c4208="" class="osim-collapsible-label"><button data-v-357e30d7="" type="button" class="me-2 osim-collapsible-toggle"><i data-v-357e30d7="" class="bi bi-dash-square-dotted me-1"></i><label data-v-2d3c4208="" class="form-label m-2"> Affected Modules </label></button>
      <div data-v-357e30d7="" class="ps-3 border-start">
        <div data-v-357e30d7="" class=""><button data-v-2d3c4208="" type="button" tabindex="-1" class="module-btn btn btn-sm border-gray" title="openshift-1">
            <!--v-if--><span data-v-2d3c4208="">openshift-1</span>
          </button><button data-v-2d3c4208="" type="button" tabindex="-1" class="module-btn btn btn-sm border-gray fw-bold" title="openshift-2
This module has no trackers associated"><i data-v-2d3c4208="" class="bi bi-exclamation-lg"></i><span data-v-2d3c4208="">openshift-2</span></button><button data-v-2d3c4208="" type="button" tabindex="-1" class="module-btn btn btn-sm border-gray fw-bold" title="openshift-3
This module has no trackers associated"><i data-v-2d3c4208="" class="bi bi-exclamation-lg"></i><span data-v-2d3c4208="">openshift-3</span></button><button data-v-2d3c4208="" type="button" tabindex="-1" class="module-btn btn btn-sm border-gray fw-bold" title="openshift-4
This module has no trackers associated"><i data-v-2d3c4208="" class="bi bi-exclamation-lg"></i><span data-v-2d3c4208="">openshift-4</span></button><button data-v-2d3c4208="" type="button" tabindex="-1" class="module-btn btn btn-sm border-gray" title="openshift-5">
            <!--v-if--><span data-v-2d3c4208="">openshift-5</span>
          </button><button data-v-2d3c4208="" type="button" tabindex="-1" class="module-btn btn btn-sm border-gray fw-bold" title="openshift-6
This module has no trackers associated"><i data-v-2d3c4208="" class="bi bi-exclamation-lg"></i><span data-v-2d3c4208="">openshift-6</span></button></div>
      </div>
    </div>
    <!--v-if-->
  </div>
  <div data-v-2d3c4208="" class="affects-management">
    <div data-v-2d3c4208="" class="pagination-controls gap-1 my-2"><button data-v-2d3c4208="" type="button" tabindex="-1" class="btn btn-sm btn-secondary rounded-end-0" disabled=""><i data-v-2d3c4208="" class="bi bi-arrow-left fs-5"></i></button><button data-v-2d3c4208="" tabindex="-1" class="osim-page-btn btn btn-sm rounded-0 btn-secondary" style="width: 34.8px;" disabled="">1</button><button data-v-2d3c4208="" type="button" tabindex="-1" class="btn btn-sm btn-secondary rounded-start-0" disabled=""><i data-v-2d3c4208="" class="bi bi-arrow-right fs-5"></i></button></div>
    <div data-v-2d3c4208="" class="affects-toolbar">
      <div data-v-2d3c4208="" class="badges my-auto gap-1 me-3">
        <div data-v-2d3c4208="" class="per-page-btn btn btn-sm btn-secondary"><i data-v-2d3c4208="" style="pointer-events: auto;" class="bi bi-dash-square fs-6 my-auto" title="Reduce affects per page"></i><span data-v-2d3c4208="" class="mx-2 my-auto">Per page: 10</span><i data-v-2d3c4208="" style="pointer-events: auto;" class="bi bi-plus-square fs-6 my-auto" title="Increase affects per page"></i></div>
        <div data-v-2d3c4208="" class="badge-btn btn btn-sm border-secondary bg-secondary text-white" style="cursor: auto;" title="Displaying all affects"><span data-v-2d3c4208="">All affects 6</span></div>
        <!--v-if-->
        <!--v-if-->
        <!--v-if-->
        <!--v-if-->
        <!--v-if-->
      </div>
      <div data-v-2d3c4208="" class="affects-table-actions ms-auto">
        <!--v-if-->
        <!--v-if-->
        <!--v-if-->
        <!--v-if-->
        <!--v-if-->
        <!--v-if-->
        <!--v-if--><button data-v-2d3c4208="" type="button" class="btn btn-sm text-white"> Add New Affect </button>
      </div>
    </div>
    <table data-v-93f0c720="" data-v-2d3c4208="" class="table align-middle table-striped mt-1" selectedmodules="">
      <thead data-v-3026e75d="" data-v-93f0c720="" class="sticky-top table-dark">
        <tr data-v-3026e75d="">
          <th data-v-3026e75d=""><input data-v-3026e75d="" type="checkbox" class="form-check-input" aria-label="Select All affects in Table"></th>
          <th data-v-3026e75d="">
            <!-- State -->
          </th>
          <th data-v-3026e75d=""> Module <i data-v-3026e75d="" class="bi-caret-up-fill bi"></i></th>
          <th data-v-3026e75d=""> Component <i data-v-3026e75d="" class="opacity-0 bi-caret-up-fill bi"></i></th>
          <th data-v-3026e75d=""><span data-v-3026e75d="" class="align-bottom me-1">Affectedness</span><button data-v-3026e75d="" id="affectedness-filter" type="button" class="btn btn-sm border-0 p-0 me-1" data-bs-toggle="dropdown" data-bs-auto-close="outside" aria-expanded="false"><i data-v-3026e75d="" class="bi text-white bi-funnel" title=""></i></button>
            <ul data-v-3026e75d="" class="dropdown-menu" aria-labelledby="affectedness-filter" style="z-index: 10;">
              <li data-v-3026e75d=""><a data-v-3026e75d="" href="#" class="btn py-0 dropdown-item"><input data-v-3026e75d="" type="checkbox" class="form-check-input me-2"><span data-v-3026e75d="">EMPTY</span></a></li>
              <li data-v-3026e75d=""><a data-v-3026e75d="" href="#" class="btn py-0 dropdown-item"><input data-v-3026e75d="" type="checkbox" class="form-check-input me-2"><span data-v-3026e75d="">NEW</span></a></li>
              <li data-v-3026e75d=""><a data-v-3026e75d="" href="#" class="btn py-0 dropdown-item"><input data-v-3026e75d="" type="checkbox" class="form-check-input me-2"><span data-v-3026e75d="">AFFECTED</span></a></li>
              <li data-v-3026e75d=""><a data-v-3026e75d="" href="#" class="btn py-0 dropdown-item"><input data-v-3026e75d="" type="checkbox" class="form-check-input me-2"><span data-v-3026e75d="">NOTAFFECTED</span></a></li>
            </ul><i data-v-3026e75d="" class="opacity-0 bi-caret-up-fill bi align-middle"></i>
          </th>
          <th data-v-3026e75d=""><span data-v-3026e75d="" class="align-bottom me-1">Resolution</span><button data-v-3026e75d="" id="resolution-filter" type="button" class="btn btn-sm border-0 p-0 me-1" data-bs-toggle="dropdown" data-bs-auto-close="outside" aria-expanded="false"><i data-v-3026e75d="" class="bi text-white bi-funnel" title=""></i></button>
            <ul data-v-3026e75d="" class="dropdown-menu" aria-labelledby="resolution-filter" style="z-index: 10;">
              <li data-v-3026e75d=""><a data-v-3026e75d="" href="#" class="btn py-0 dropdown-item"><input data-v-3026e75d="" type="checkbox" class="form-check-input me-2"><span data-v-3026e75d="">EMPTY</span></a></li>
              <li data-v-3026e75d=""><a data-v-3026e75d="" href="#" class="btn py-0 dropdown-item"><input data-v-3026e75d="" type="checkbox" class="form-check-input me-2"><span data-v-3026e75d="">FIX</span></a></li>
              <li data-v-3026e75d=""><a data-v-3026e75d="" href="#" class="btn py-0 dropdown-item"><input data-v-3026e75d="" type="checkbox" class="form-check-input me-2"><span data-v-3026e75d="">DEFER</span></a></li>
              <li data-v-3026e75d=""><a data-v-3026e75d="" href="#" class="btn py-0 dropdown-item"><input data-v-3026e75d="" type="checkbox" class="form-check-input me-2"><span data-v-3026e75d="">WONTFIX</span></a></li>
              <li data-v-3026e75d=""><a data-v-3026e75d="" href="#" class="btn py-0 dropdown-item"><input data-v-3026e75d="" type="checkbox" class="form-check-input me-2"><span data-v-3026e75d="">OOSS</span></a></li>
              <li data-v-3026e75d=""><a data-v-3026e75d="" href="#" class="btn py-0 dropdown-item"><input data-v-3026e75d="" type="checkbox" class="form-check-input me-2"><span data-v-3026e75d="">DELEGATED</span></a></li>
              <li data-v-3026e75d=""><a data-v-3026e75d="" href="#" class="btn py-0 dropdown-item"><input data-v-3026e75d="" type="checkbox" class="form-check-input me-2"><span data-v-3026e75d="">WONTREPORT</span></a></li>
            </ul><i data-v-3026e75d="" class="opacity-0 bi-caret-up-fill bi align-middle"></i>
          </th>
          <th data-v-3026e75d=""><span data-v-3026e75d="" class="align-bottom me-1">Impact</span><button data-v-3026e75d="" id="impact-filter" type="button" class="btn btn-sm border-0 p-0 me-1" data-bs-toggle="dropdown" data-bs-auto-close="outside" aria-expanded="false"><i data-v-3026e75d="" class="bi text-white bi-funnel" title=""></i></button>
            <ul data-v-3026e75d="" class="dropdown-menu" aria-labelledby="impact-filter" style="z-index: 10;">
              <li data-v-3026e75d=""><a data-v-3026e75d="" href="#" class="btn py-0 dropdown-item"><input data-v-3026e75d="" type="checkbox" class="form-check-input me-2"><span data-v-3026e75d="">LOW</span></a></li>
              <li data-v-3026e75d=""><a data-v-3026e75d="" href="#" class="btn py-0 dropdown-item"><input data-v-3026e75d="" type="checkbox" class="form-check-input me-2"><span data-v-3026e75d="">MODERATE</span></a></li>
              <li data-v-3026e75d=""><a data-v-3026e75d="" href="#" class="btn py-0 dropdown-item"><input data-v-3026e75d="" type="checkbox" class="form-check-input me-2"><span data-v-3026e75d="">IMPORTANT</span></a></li>
              <li data-v-3026e75d=""><a data-v-3026e75d="" href="#" class="btn py-0 dropdown-item"><input data-v-3026e75d="" type="checkbox" class="form-check-input me-2"><span data-v-3026e75d="">CRITICAL</span></a></li>
              <li data-v-3026e75d=""><a data-v-3026e75d="" href="#" class="btn py-0 dropdown-item"><input data-v-3026e75d="" type="checkbox" class="form-check-input me-2"><span data-v-3026e75d="">EMPTY</span></a></li>
            </ul><i data-v-3026e75d="" class="opacity-0 bi-caret-up-fill bi align-middle"></i>
          </th>
          <th data-v-3026e75d=""> CVSS <i data-v-3026e75d="" class="opacity-0 bi-caret-up-fill bi"></i></th>
          <th data-v-3026e75d=""> Trackers <i data-v-3026e75d="" class="opacity-0 bi-caret-up-fill bi"></i></th>
          <th data-v-3026e75d="">Actions</th>
        </tr>
      </thead>
      <tbody data-v-93f0c720="">
        <tr data-v-cf2e7c24="" data-v-93f0c720="" class="" style="cursor: pointer;" title="">
          <td data-v-cf2e7c24=""><i data-v-cf2e7c24="" class="row-left-indicator bi bi-caret-right-fill fs-4"></i><input data-v-cf2e7c24="" type="checkbox" class="form-check-input"></td>
          <td data-v-cf2e7c24="">
            <div data-v-cf2e7c24="" class="ps-3"><i data-v-cf2e7c24="" class="bi bi-database-check" title="This affect is saved"></i></div>
          </td>
          <td data-v-cf2e7c24=""><span data-v-cf2e7c24="">openshift-1</span></td>
          <td data-v-cf2e7c24=""><span data-v-cf2e7c24="">openshift-1-1</span></td>
          <td data-v-cf2e7c24=""><span data-v-cf2e7c24="">AFFECTED</span></td>
          <td data-v-cf2e7c24=""><span data-v-cf2e7c24="">FIX</span></td>
          <td data-v-cf2e7c24=""><span data-v-cf2e7c24="">LOW</span></td>
          <td data-v-cf2e7c24=""><span data-v-cf2e7c24=""></span></td>
          <td data-v-cf2e7c24="">
            <div data-v-cf2e7c24="" class="affect-tracker-cell"><span data-v-cf2e7c24="" class="me-2 my-auto">4</span><button data-v-cf2e7c24="" type="button" class="btn btn-sm px-1 py-0 d-flex rounded-circle"><i data-v-cf2e7c24="" class="bi bi-plus lh-sm m-auto"></i></button></div>
          </td>
          <td data-v-cf2e7c24=""><button data-v-cf2e7c24="" type="button" class="btn btn-sm" title="Edit affect" tabindex="-1"><i data-v-cf2e7c24="" class="bi bi-pencil"></i></button>
            <!--v-if--><button data-v-cf2e7c24="" type="button" class="btn btn-sm" title="Remove affect" tabindex="-1"><i data-v-cf2e7c24="" class="bi bi-trash"></i></button>
            <!--v-if-->
            <!--v-if-->
            <!--v-if--><i data-v-cf2e7c24="" class="row-right-indicator bi bi-caret-left-fill fs-4"></i>
          </td>
        </tr>
        <tr data-v-cf2e7c24="" data-v-93f0c720="" class="" style="cursor: pointer;" title="">
          <td data-v-cf2e7c24=""><i data-v-cf2e7c24="" class="row-left-indicator bi bi-caret-right-fill fs-4"></i><input data-v-cf2e7c24="" type="checkbox" class="form-check-input"></td>
          <td data-v-cf2e7c24="">
            <div data-v-cf2e7c24="" class="ps-3"><i data-v-cf2e7c24="" class="bi bi-database-check" title="This affect is saved"></i></div>
          </td>
          <td data-v-cf2e7c24=""><span data-v-cf2e7c24="">openshift-2</span></td>
          <td data-v-cf2e7c24=""><span data-v-cf2e7c24="">openshift-2-1</span></td>
          <td data-v-cf2e7c24=""><span data-v-cf2e7c24="">AFFECTED</span></td>
          <td data-v-cf2e7c24=""><span data-v-cf2e7c24="">FIX</span></td>
          <td data-v-cf2e7c24=""><span data-v-cf2e7c24="">LOW</span></td>
          <td data-v-cf2e7c24=""><span data-v-cf2e7c24=""></span></td>
          <td data-v-cf2e7c24="">
            <div data-v-cf2e7c24="" class="affect-tracker-cell"><span data-v-cf2e7c24="" class="me-2 my-auto">0</span><button data-v-cf2e7c24="" type="button" class="btn btn-sm px-1 py-0 d-flex rounded-circle"><i data-v-cf2e7c24="" class="bi bi-plus lh-sm m-auto"></i></button></div>
          </td>
          <td data-v-cf2e7c24=""><button data-v-cf2e7c24="" type="button" class="btn btn-sm" title="Edit affect" tabindex="-1"><i data-v-cf2e7c24="" class="bi bi-pencil"></i></button>
            <!--v-if--><button data-v-cf2e7c24="" type="button" class="btn btn-sm" title="Remove affect" tabindex="-1"><i data-v-cf2e7c24="" class="bi bi-trash"></i></button>
            <!--v-if-->
            <!--v-if-->
            <!--v-if--><i data-v-cf2e7c24="" class="row-right-indicator bi bi-caret-left-fill fs-4"></i>
          </td>
        </tr>
        <tr data-v-cf2e7c24="" data-v-93f0c720="" class="" style="cursor: pointer;" title="">
          <td data-v-cf2e7c24=""><i data-v-cf2e7c24="" class="row-left-indicator bi bi-caret-right-fill fs-4"></i><input data-v-cf2e7c24="" type="checkbox" class="form-check-input"></td>
          <td data-v-cf2e7c24="">
            <div data-v-cf2e7c24="" class="ps-3"><i data-v-cf2e7c24="" class="bi bi-database-check" title="This affect is saved"></i></div>
          </td>
          <td data-v-cf2e7c24=""><span data-v-cf2e7c24="">openshift-3</span></td>
          <td data-v-cf2e7c24=""><span data-v-cf2e7c24="">openshift-3-1</span></td>
          <td data-v-cf2e7c24=""><span data-v-cf2e7c24="">AFFECTED</span></td>
          <td data-v-cf2e7c24=""><span data-v-cf2e7c24="">FIX</span></td>
          <td data-v-cf2e7c24=""><span data-v-cf2e7c24="">LOW</span></td>
          <td data-v-cf2e7c24=""><span data-v-cf2e7c24=""></span></td>
          <td data-v-cf2e7c24="">
            <div data-v-cf2e7c24="" class="affect-tracker-cell"><span data-v-cf2e7c24="" class="me-2 my-auto">0</span><button data-v-cf2e7c24="" type="button" class="btn btn-sm px-1 py-0 d-flex rounded-circle"><i data-v-cf2e7c24="" class="bi bi-plus lh-sm m-auto"></i></button></div>
          </td>
          <td data-v-cf2e7c24=""><button data-v-cf2e7c24="" type="button" class="btn btn-sm" title="Edit affect" tabindex="-1"><i data-v-cf2e7c24="" class="bi bi-pencil"></i></button>
            <!--v-if--><button data-v-cf2e7c24="" type="button" class="btn btn-sm" title="Remove affect" tabindex="-1"><i data-v-cf2e7c24="" class="bi bi-trash"></i></button>
            <!--v-if-->
            <!--v-if-->
            <!--v-if--><i data-v-cf2e7c24="" class="row-right-indicator bi bi-caret-left-fill fs-4"></i>
          </td>
        </tr>
        <tr data-v-cf2e7c24="" data-v-93f0c720="" class="" style="cursor: pointer;" title="">
          <td data-v-cf2e7c24=""><i data-v-cf2e7c24="" class="row-left-indicator bi bi-caret-right-fill fs-4"></i><input data-v-cf2e7c24="" type="checkbox" class="form-check-input"></td>
          <td data-v-cf2e7c24="">
            <div data-v-cf2e7c24="" class="ps-3"><i data-v-cf2e7c24="" class="bi bi-database-check" title="This affect is saved"></i></div>
          </td>
          <td data-v-cf2e7c24=""><span data-v-cf2e7c24="">openshift-4</span></td>
          <td data-v-cf2e7c24=""><span data-v-cf2e7c24="">openshift-4-1</span></td>
          <td data-v-cf2e7c24=""><span data-v-cf2e7c24="">AFFECTED</span></td>
          <td data-v-cf2e7c24=""><span data-v-cf2e7c24="">FIX</span></td>
          <td data-v-cf2e7c24=""><span data-v-cf2e7c24="">LOW</span></td>
          <td data-v-cf2e7c24=""><span data-v-cf2e7c24=""></span></td>
          <td data-v-cf2e7c24="">
            <div data-v-cf2e7c24="" class="affect-tracker-cell"><span data-v-cf2e7c24="" class="me-2 my-auto">0</span><button data-v-cf2e7c24="" type="button" class="btn btn-sm px-1 py-0 d-flex rounded-circle"><i data-v-cf2e7c24="" class="bi bi-plus lh-sm m-auto"></i></button></div>
          </td>
          <td data-v-cf2e7c24=""><button data-v-cf2e7c24="" type="button" class="btn btn-sm" title="Edit affect" tabindex="-1"><i data-v-cf2e7c24="" class="bi bi-pencil"></i></button>
            <!--v-if--><button data-v-cf2e7c24="" type="button" class="btn btn-sm" title="Remove affect" tabindex="-1"><i data-v-cf2e7c24="" class="bi bi-trash"></i></button>
            <!--v-if-->
            <!--v-if-->
            <!--v-if--><i data-v-cf2e7c24="" class="row-right-indicator bi bi-caret-left-fill fs-4"></i>
          </td>
        </tr>
        <tr data-v-cf2e7c24="" data-v-93f0c720="" class="" style="cursor: pointer;" title="">
          <td data-v-cf2e7c24=""><i data-v-cf2e7c24="" class="row-left-indicator bi bi-caret-right-fill fs-4"></i><input data-v-cf2e7c24="" type="checkbox" class="form-check-input"></td>
          <td data-v-cf2e7c24="">
            <div data-v-cf2e7c24="" class="ps-3"><i data-v-cf2e7c24="" class="bi bi-database-check" title="This affect is saved"></i></div>
          </td>
          <td data-v-cf2e7c24=""><span data-v-cf2e7c24="">openshift-5</span></td>
          <td data-v-cf2e7c24=""><span data-v-cf2e7c24="">openshift-5-1</span></td>
          <td data-v-cf2e7c24=""><span data-v-cf2e7c24="">AFFECTED</span></td>
          <td data-v-cf2e7c24=""><span data-v-cf2e7c24="">FIX</span></td>
          <td data-v-cf2e7c24=""><span data-v-cf2e7c24="">LOW</span></td>
          <td data-v-cf2e7c24=""><span data-v-cf2e7c24=""></span></td>
          <td data-v-cf2e7c24="">
            <div data-v-cf2e7c24="" class="affect-tracker-cell"><span data-v-cf2e7c24="" class="me-2 my-auto">2</span><button data-v-cf2e7c24="" type="button" class="btn btn-sm px-1 py-0 d-flex rounded-circle"><i data-v-cf2e7c24="" class="bi bi-plus lh-sm m-auto"></i></button></div>
          </td>
          <td data-v-cf2e7c24=""><button data-v-cf2e7c24="" type="button" class="btn btn-sm" title="Edit affect" tabindex="-1"><i data-v-cf2e7c24="" class="bi bi-pencil"></i></button>
            <!--v-if--><button data-v-cf2e7c24="" type="button" class="btn btn-sm" title="Remove affect" tabindex="-1"><i data-v-cf2e7c24="" class="bi bi-trash"></i></button>
            <!--v-if-->
            <!--v-if-->
            <!--v-if--><i data-v-cf2e7c24="" class="row-right-indicator bi bi-caret-left-fill fs-4"></i>
          </td>
        </tr>
        <tr data-v-cf2e7c24="" data-v-93f0c720="" class="border-bottom border-gray" style="cursor: pointer;" title="">
          <td data-v-cf2e7c24=""><i data-v-cf2e7c24="" class="row-left-indicator bi bi-caret-right-fill fs-4"></i><input data-v-cf2e7c24="" type="checkbox" class="form-check-input"></td>
          <td data-v-cf2e7c24="">
            <div data-v-cf2e7c24="" class="ps-3"><i data-v-cf2e7c24="" class="bi bi-database-check" title="This affect is saved"></i></div>
          </td>
          <td data-v-cf2e7c24=""><span data-v-cf2e7c24="">openshift-6</span></td>
          <td data-v-cf2e7c24=""><span data-v-cf2e7c24="">openshift-6-1</span></td>
          <td data-v-cf2e7c24=""><span data-v-cf2e7c24=""></span></td>
          <td data-v-cf2e7c24=""><span data-v-cf2e7c24="">WONTFIX</span></td>
          <td data-v-cf2e7c24=""><span data-v-cf2e7c24="">CRITICAL</span></td>
          <td data-v-cf2e7c24=""><span data-v-cf2e7c24=""></span></td>
          <td data-v-cf2e7c24="">
            <div data-v-cf2e7c24="" class="affect-tracker-cell"><span data-v-cf2e7c24="" class="me-2 my-auto">0</span><button data-v-cf2e7c24="" type="button" class="btn btn-sm px-1 py-0 d-flex rounded-circle"><i data-v-cf2e7c24="" class="bi bi-plus lh-sm m-auto"></i></button></div>
          </td>
          <td data-v-cf2e7c24=""><button data-v-cf2e7c24="" type="button" class="btn btn-sm" title="Edit affect" tabindex="-1"><i data-v-cf2e7c24="" class="bi bi-pencil"></i></button>
            <!--v-if--><button data-v-cf2e7c24="" type="button" class="btn btn-sm" title="Remove affect" tabindex="-1"><i data-v-cf2e7c24="" class="bi bi-trash"></i></button>
            <!--v-if-->
            <!--v-if-->
            <!--v-if--><i data-v-cf2e7c24="" class="row-right-indicator bi bi-caret-left-fill fs-4"></i>
          </td>
        </tr>
      </tbody>
    </table>
    <!--v-if-->
  </div><!-- TODO: Fix/resolve post-rebase -->
  <div data-v-7006d35c="" data-v-2d3c4208="" affectsnotbeingdeleted="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]">
    <div data-v-7006d35c="" class="affects-trackers">
      <div data-v-7006d35c="" class="bg-dark rounded-top-2 text-info">
        <div data-v-7006d35c="" class="affect-trackers-heading d-flex p-1 pt-2 px-3">
          <h5 data-v-7006d35c="" class="m-0">Trackers</h5>
        </div>
        <div data-v-7006d35c="" class="pagination-controls gap-1 ms-2"><button data-v-7006d35c="" type="button" class="btn btn-sm btn-info rounded-end-0" disabled=""><i data-v-7006d35c="" class="bi bi-arrow-left fs-5"></i></button><button data-v-7006d35c="" class="osim-page-btn btn btn-sm rounded-0 btn-info" disabled="">1</button><button data-v-7006d35c="" type="button" class="btn btn-sm btn-info rounded-start-0" disabled=""><i data-v-7006d35c="" class="bi bi-arrow-right fs-5"></i></button></div>
        <div data-v-7006d35c="" class="trackers-toolbar p-2 pt-1">
          <div data-v-7006d35c="" class="tracker-badges">
            <div data-v-7006d35c="" class="per-page-btn btn btn-sm badge"><i data-v-7006d35c="" style="pointer-events: auto;" class="bi bi-dash-square fs-6 my-auto" title="Reduce trackers per page"></i><span data-v-7006d35c="" class="mx-2 my-auto">Per page: 10</span><i data-v-7006d35c="" style="pointer-events: auto;" class="bi bi-plus-square fs-6 my-auto" title="Increase trackers per page"></i></div>
            <div data-v-7006d35c="" class="badge" title="All trackers in this flaw"><span data-v-7006d35c="">All trackers 6</span></div>
            <div data-v-7006d35c="" class="badge" title="Trackers displayed in current page"><span data-v-7006d35c="">Displaying 6</span></div>
          </div><button data-v-7006d35c="" type="button" class="btn btn-sm btn-info ms-auto"><i data-v-7006d35c="" class="bi bi-binoculars"></i> Show Trackers Manager </button>
        </div>
      </div>
      <div data-v-7006d35c="" class="osim-tracker-card pb-2 pt-0 pe-2 ps-2 bg-dark">
        <table data-v-7006d35c="" class="table table-striped table-info mb-0">
          <thead data-v-7006d35c="" class="sticky-top">
            <tr data-v-7006d35c="">
              <th data-v-7006d35c="">Bug ID</th>
              <th data-v-7006d35c="">Module</th>
              <th data-v-7006d35c="">Product Stream</th>
              <th data-v-7006d35c=""><span data-v-7006d35c="" class="align-bottom me-1">Status</span><button data-v-7006d35c="" id="status-filter" type="button" class="btn btn-sm border-0 p-0" data-bs-toggle="dropdown" data-bs-auto-close="outside" aria-expanded="false"><i data-v-7006d35c="" class="bi bi-funnel" title=""></i></button>
                <ul data-v-7006d35c="" class="dropdown-menu" aria-labelledby="status-filter">
                  <li data-v-7006d35c=""><a data-v-7006d35c="" href="#" class="btn py-0 dropdown-item"><input data-v-7006d35c="" type="checkbox" class="form-check-input me-2"><span data-v-7006d35c="">NEW</span></a></li>
                  <li data-v-7006d35c=""><a data-v-7006d35c="" href="#" class="btn py-0 dropdown-item"><input data-v-7006d35c="" type="checkbox" class="form-check-input me-2"><span data-v-7006d35c="">CLOSED</span></a></li>
                </ul>
              </th>
              <th data-v-7006d35c="">Resolution</th>
              <th data-v-7006d35c=""> Created date <i data-v-7006d35c="" class="bi-caret-up-fill bi"></i></th>
              <th data-v-7006d35c=""> Updated date <i data-v-7006d35c="" class="opacity-0 bi-caret-up-fill bi"></i></th>
            </tr>
          </thead>
          <tbody data-v-7006d35c="">
            <tr data-v-7006d35c="">
              <td data-v-7006d35c=""><a data-v-7006d35c="" href="http://jira-service:8002/browse/XXXX-0006" target="_blank">XXXX-0006 <i data-v-7006d35c="" class="bi-box-arrow-up-right"></i></a></td>
              <td data-v-7006d35c="" title="openshift-5">openshift-5</td>
              <td data-v-7006d35c="" title="xxxx-0-006">xxxx-0-006</td>
              <td data-v-7006d35c="">CLOSED</td>
              <td data-v-7006d35c=""></td>
              <td data-v-7006d35c="">2024-07-01 13:05 UTC</td>
              <td data-v-7006d35c="">2024-07-01 13:06 UTC</td>
            </tr>
            <tr data-v-7006d35c="">
              <td data-v-7006d35c=""><a data-v-7006d35c="" href="http://jira-service:8002/browse/XXXX-0005" target="_blank">XXXX-0005 <i data-v-7006d35c="" class="bi-box-arrow-up-right"></i></a></td>
              <td data-v-7006d35c="" title="openshift-5">openshift-5</td>
              <td data-v-7006d35c="" title="xxxx-0-005">xxxx-0-005</td>
              <td data-v-7006d35c="">NEW</td>
              <td data-v-7006d35c=""></td>
              <td data-v-7006d35c="">2024-08-01 13:05 UTC</td>
              <td data-v-7006d35c="">2024-08-01 13:06 UTC</td>
            </tr>
            <tr data-v-7006d35c="">
              <td data-v-7006d35c=""><a data-v-7006d35c="" href="http://jira-service:8002/browse/XXXX-0004" target="_blank">XXXX-0004 <i data-v-7006d35c="" class="bi-box-arrow-up-right"></i></a></td>
              <td data-v-7006d35c="" title="openshift-1">openshift-1</td>
              <td data-v-7006d35c="" title="xxxx-0-004">xxxx-0-004</td>
              <td data-v-7006d35c="">CLOSED</td>
              <td data-v-7006d35c=""></td>
              <td data-v-7006d35c="">2024-09-01 13:05 UTC</td>
              <td data-v-7006d35c="">2024-09-01 13:06 UTC</td>
            </tr>
            <tr data-v-7006d35c="">
              <td data-v-7006d35c=""><a data-v-7006d35c="" href="http://jira-service:8002/browse/XXXX-0003" target="_blank">XXXX-0003 <i data-v-7006d35c="" class="bi-box-arrow-up-right"></i></a></td>
              <td data-v-7006d35c="" title="openshift-1">openshift-1</td>
              <td data-v-7006d35c="" title="xxxx-0-003">xxxx-0-003</td>
              <td data-v-7006d35c="">NEW</td>
              <td data-v-7006d35c=""></td>
              <td data-v-7006d35c="">2024-10-01 13:05 UTC</td>
              <td data-v-7006d35c="">2024-10-01 13:06 UTC</td>
            </tr>
            <tr data-v-7006d35c="">
              <td data-v-7006d35c=""><a data-v-7006d35c="" href="http://jira-service:8002/browse/XXXX-0002" target="_blank">XXXX-0002 <i data-v-7006d35c="" class="bi-box-arrow-up-right"></i></a></td>
              <td data-v-7006d35c="" title="openshift-1">openshift-1</td>
              <td data-v-7006d35c="" title="xxxx-0-002">xxxx-0-002</td>
              <td data-v-7006d35c="">CLOSED</td>
              <td data-v-7006d35c=""></td>
              <td data-v-7006d35c="">2024-11-01 13:05 UTC</td>
              <td data-v-7006d35c="">2024-11-01 13:06 UTC</td>
            </tr>
            <tr data-v-7006d35c="">
              <td data-v-7006d35c=""><a data-v-7006d35c="" href="http://jira-service:8002/browse/XXXX-0001" target="_blank">XXXX-0001 <i data-v-7006d35c="" class="bi-box-arrow-up-right"></i></a></td>
              <td data-v-7006d35c="" title="openshift-1">openshift-1</td>
              <td data-v-7006d35c="" title="xxxx-0-001">xxxx-0-001</td>
              <td data-v-7006d35c="">NEW</td>
              <td data-v-7006d35c=""></td>
              <td data-v-7006d35c="">2024-12-01 13:05 UTC</td>
              <td data-v-7006d35c="">2024-12-01 13:06 UTC</td>
            </tr>
          </tbody>
        </table>
        <!--v-if-->
        <!--v-if-->
      </div>
    </div>
  </div>
  <div data-v-2d3c4208="" class="osim-tracker-manager-modal-container">
    <transition-stub data-v-a347fd2c="" name="modal" appear="false" persisted="false" css="true">
      <!--v-if-->
    </transition-stub>
    <transition-stub data-v-a347fd2c="" name="modal-bg" appear="false" persisted="false" css="true">
      <!--v-if-->
    </transition-stub>
  </div>
</div>"
`;

exports[`flawAffects > Correctly renders the component when there are not affects to display 1`] = `
"<div data-v-2d3c4208="" class="osim-affects-section">
  <h4 data-v-2d3c4208="">Affected Offerings</h4>
  <div data-v-2d3c4208="" class="affect-modules-selection">
    <div data-v-357e30d7="" data-v-2d3c4208="" class="osim-collapsible-label"><button data-v-357e30d7="" disabled="" type="button" class="me-2 osim-collapsible-toggle pe-none"><i data-v-357e30d7="" class="bi bi-dash-square-dotted me-1"></i><label data-v-2d3c4208="" class="form-label m-2"> Affected Modules </label></button>
      <div data-v-357e30d7="" class="ps-3 border-start">
        <div data-v-357e30d7="" class=""></div>
      </div>
    </div><span data-v-2d3c4208="" class="my-2 p-2">No modules to display</span>
  </div>
  <div data-v-2d3c4208="" class="affects-management">
    <!--v-if-->
    <div data-v-2d3c4208="" class="affects-toolbar">
      <div data-v-2d3c4208="" class="badges my-auto gap-1">
        <!--v-if-->
        <!--v-if-->
        <!--v-if-->
        <!--v-if-->
        <!--v-if-->
        <!--v-if-->
        <!--v-if-->
      </div>
      <div data-v-2d3c4208="" class="affects-table-actions ms-auto">
        <!--v-if-->
        <!--v-if-->
        <!--v-if-->
        <!--v-if-->
        <!--v-if-->
        <!--v-if-->
        <!--v-if--><button data-v-2d3c4208="" type="button" class="btn btn-sm text-white"> Add New Affect </button>
      </div>
    </div>
    <table data-v-93f0c720="" data-v-2d3c4208="" class="table align-middle table-striped mt-1 mb-0" selectedmodules="">
      <thead data-v-3026e75d="" data-v-93f0c720="" class="sticky-top table-dark">
        <tr data-v-3026e75d="">
          <th data-v-3026e75d=""><input data-v-3026e75d="" type="checkbox" class="form-check-input" aria-label="Select All affects in Table" checked=""></th>
          <th data-v-3026e75d="">
            <!-- State -->
          </th>
          <th data-v-3026e75d=""> Module <i data-v-3026e75d="" class="bi-caret-up-fill bi"></i></th>
          <th data-v-3026e75d=""> Component <i data-v-3026e75d="" class="opacity-0 bi-caret-up-fill bi"></i></th>
          <th data-v-3026e75d=""><span data-v-3026e75d="" class="align-bottom me-1">Affectedness</span><button data-v-3026e75d="" id="affectedness-filter" type="button" class="btn btn-sm border-0 p-0 me-1" data-bs-toggle="dropdown" data-bs-auto-close="outside" aria-expanded="false"><i data-v-3026e75d="" class="bi text-white bi-funnel" title=""></i></button>
            <ul data-v-3026e75d="" class="dropdown-menu" aria-labelledby="affectedness-filter" style="z-index: 10;">
              <li data-v-3026e75d=""><a data-v-3026e75d="" href="#" class="btn py-0 dropdown-item"><input data-v-3026e75d="" type="checkbox" class="form-check-input me-2"><span data-v-3026e75d="">EMPTY</span></a></li>
              <li data-v-3026e75d=""><a data-v-3026e75d="" href="#" class="btn py-0 dropdown-item"><input data-v-3026e75d="" type="checkbox" class="form-check-input me-2"><span data-v-3026e75d="">NEW</span></a></li>
              <li data-v-3026e75d=""><a data-v-3026e75d="" href="#" class="btn py-0 dropdown-item"><input data-v-3026e75d="" type="checkbox" class="form-check-input me-2"><span data-v-3026e75d="">AFFECTED</span></a></li>
              <li data-v-3026e75d=""><a data-v-3026e75d="" href="#" class="btn py-0 dropdown-item"><input data-v-3026e75d="" type="checkbox" class="form-check-input me-2"><span data-v-3026e75d="">NOTAFFECTED</span></a></li>
            </ul><i data-v-3026e75d="" class="opacity-0 bi-caret-up-fill bi align-middle"></i>
          </th>
          <th data-v-3026e75d=""><span data-v-3026e75d="" class="align-bottom me-1">Resolution</span><button data-v-3026e75d="" id="resolution-filter" type="button" class="btn btn-sm border-0 p-0 me-1" data-bs-toggle="dropdown" data-bs-auto-close="outside" aria-expanded="false"><i data-v-3026e75d="" class="bi text-white bi-funnel" title=""></i></button>
            <ul data-v-3026e75d="" class="dropdown-menu" aria-labelledby="resolution-filter" style="z-index: 10;">
              <li data-v-3026e75d=""><a data-v-3026e75d="" href="#" class="btn py-0 dropdown-item"><input data-v-3026e75d="" type="checkbox" class="form-check-input me-2"><span data-v-3026e75d="">EMPTY</span></a></li>
              <li data-v-3026e75d=""><a data-v-3026e75d="" href="#" class="btn py-0 dropdown-item"><input data-v-3026e75d="" type="checkbox" class="form-check-input me-2"><span data-v-3026e75d="">FIX</span></a></li>
              <li data-v-3026e75d=""><a data-v-3026e75d="" href="#" class="btn py-0 dropdown-item"><input data-v-3026e75d="" type="checkbox" class="form-check-input me-2"><span data-v-3026e75d="">DEFER</span></a></li>
              <li data-v-3026e75d=""><a data-v-3026e75d="" href="#" class="btn py-0 dropdown-item"><input data-v-3026e75d="" type="checkbox" class="form-check-input me-2"><span data-v-3026e75d="">WONTFIX</span></a></li>
              <li data-v-3026e75d=""><a data-v-3026e75d="" href="#" class="btn py-0 dropdown-item"><input data-v-3026e75d="" type="checkbox" class="form-check-input me-2"><span data-v-3026e75d="">OOSS</span></a></li>
              <li data-v-3026e75d=""><a data-v-3026e75d="" href="#" class="btn py-0 dropdown-item"><input data-v-3026e75d="" type="checkbox" class="form-check-input me-2"><span data-v-3026e75d="">DELEGATED</span></a></li>
              <li data-v-3026e75d=""><a data-v-3026e75d="" href="#" class="btn py-0 dropdown-item"><input data-v-3026e75d="" type="checkbox" class="form-check-input me-2"><span data-v-3026e75d="">WONTREPORT</span></a></li>
            </ul><i data-v-3026e75d="" class="opacity-0 bi-caret-up-fill bi align-middle"></i>
          </th>
          <th data-v-3026e75d=""><span data-v-3026e75d="" class="align-bottom me-1">Impact</span><button data-v-3026e75d="" id="impact-filter" type="button" class="btn btn-sm border-0 p-0 me-1" data-bs-toggle="dropdown" data-bs-auto-close="outside" aria-expanded="false"><i data-v-3026e75d="" class="bi text-white bi-funnel" title=""></i></button>
            <ul data-v-3026e75d="" class="dropdown-menu" aria-labelledby="impact-filter" style="z-index: 10;">
              <li data-v-3026e75d=""><a data-v-3026e75d="" href="#" class="btn py-0 dropdown-item"><input data-v-3026e75d="" type="checkbox" class="form-check-input me-2"><span data-v-3026e75d="">LOW</span></a></li>
              <li data-v-3026e75d=""><a data-v-3026e75d="" href="#" class="btn py-0 dropdown-item"><input data-v-3026e75d="" type="checkbox" class="form-check-input me-2"><span data-v-3026e75d="">MODERATE</span></a></li>
              <li data-v-3026e75d=""><a data-v-3026e75d="" href="#" class="btn py-0 dropdown-item"><input data-v-3026e75d="" type="checkbox" class="form-check-input me-2"><span data-v-3026e75d="">IMPORTANT</span></a></li>
              <li data-v-3026e75d=""><a data-v-3026e75d="" href="#" class="btn py-0 dropdown-item"><input data-v-3026e75d="" type="checkbox" class="form-check-input me-2"><span data-v-3026e75d="">CRITICAL</span></a></li>
              <li data-v-3026e75d=""><a data-v-3026e75d="" href="#" class="btn py-0 dropdown-item"><input data-v-3026e75d="" type="checkbox" class="form-check-input me-2"><span data-v-3026e75d="">EMPTY</span></a></li>
            </ul><i data-v-3026e75d="" class="opacity-0 bi-caret-up-fill bi align-middle"></i>
          </th>
          <th data-v-3026e75d=""> CVSS <i data-v-3026e75d="" class="opacity-0 bi-caret-up-fill bi"></i></th>
          <th data-v-3026e75d=""> Trackers <i data-v-3026e75d="" class="opacity-0 bi-caret-up-fill bi"></i></th>
          <th data-v-3026e75d="">Actions</th>
        </tr>
      </thead>
      <tbody data-v-93f0c720=""></tbody>
    </table><span data-v-2d3c4208="" class="my-2 p-2 d-flex"> This flaw has no affects </span>
  </div><!-- TODO: Fix/resolve post-rebase -->
  <div data-v-7006d35c="" data-v-2d3c4208="" affectsnotbeingdeleted="">
    <div data-v-7006d35c="" class="affects-trackers">
      <div data-v-7006d35c="" class="bg-dark rounded-top-2 text-info">
        <div data-v-7006d35c="" class="affect-trackers-heading d-flex p-1 pt-2 px-3">
          <h5 data-v-7006d35c="" class="m-0">Trackers</h5>
        </div>
        <!--v-if-->
        <div data-v-7006d35c="" class="trackers-toolbar p-2 pt-1">
          <div data-v-7006d35c="" class="tracker-badges">
            <!--v-if-->
            <!--v-if-->
            <!--v-if-->
          </div><button data-v-7006d35c="" type="button" class="btn btn-sm btn-info ms-auto"><i data-v-7006d35c="" class="bi bi-binoculars"></i> Show Trackers Manager </button>
        </div>
      </div>
      <div data-v-7006d35c="" class="osim-tracker-card pb-2 pt-0 pe-2 ps-2 bg-dark">
        <table data-v-7006d35c="" class="table table-striped table-info mb-0">
          <thead data-v-7006d35c="" class="sticky-top">
            <tr data-v-7006d35c="">
              <th data-v-7006d35c="">Bug ID</th>
              <th data-v-7006d35c="">Module</th>
              <th data-v-7006d35c="">Product Stream</th>
              <th data-v-7006d35c=""><span data-v-7006d35c="" class="align-bottom me-1">Status</span><button data-v-7006d35c="" id="status-filter" type="button" class="btn btn-sm border-0 p-0" data-bs-toggle="dropdown" data-bs-auto-close="outside" aria-expanded="false"><i data-v-7006d35c="" class="bi bi-funnel" title=""></i></button>
                <ul data-v-7006d35c="" class="dropdown-menu" aria-labelledby="status-filter"></ul>
              </th>
              <th data-v-7006d35c="">Resolution</th>
              <th data-v-7006d35c=""> Created date <i data-v-7006d35c="" class="bi-caret-up-fill bi"></i></th>
              <th data-v-7006d35c=""> Updated date <i data-v-7006d35c="" class="opacity-0 bi-caret-up-fill bi"></i></th>
            </tr>
          </thead>
          <tbody data-v-7006d35c=""></tbody>
        </table>
        <div data-v-7006d35c=""> No trackers to display </div>
        <!--v-if-->
      </div>
    </div>
  </div>
  <div data-v-2d3c4208="" class="osim-tracker-manager-modal-container">
    <transition-stub data-v-a347fd2c="" name="modal" appear="false" persisted="false" css="true">
      <!--v-if-->
    </transition-stub>
    <transition-stub data-v-a347fd2c="" name="modal-bg" appear="false" persisted="false" css="true">
      <!--v-if-->
    </transition-stub>
  </div>
</div>"
`;
